--- a/composer.json
+++ b/composer.json
@@ -1,13 +1,13 @@
 {
-    "name": "jiaxincui/hashid",
+    "name": "yexiaofeng/hashid",
     "type": "library",
     "description": "Laravel ID Encrypt Helper",
     "keywords": ["laravel", "encrypt", "helper", "hashid"],
     "license": "MIT",
     "authors": [
         {
-            "name": "Jiaxin Cui",
-            "email": "jenkincei@hotmail.com"
+            "name": "xiaofeng Ye",
+            "email": "760361093@qq.com"
         }
     ],
     "require": {
@@ -16,7 +16,7 @@
     },
     "autoload": {
         "psr-4": {
-            "Jiaxincui\\Hashid\\": "src/"
+            "Yexiaofeng\\Hashid\\": "src/"
         },
         "files": [
             "src/helpers.php"
